package logic;

public interface MissionStoreListener {
    void onStoreChanged();
}
